yoshimi 1.5.3 M

2017-9-13 Will
* BugFix: reset not clearing master bandwidth.
* Master bandwidth added to MIDI controls.
* Master bandwidth now MIDI-learnable.
* Docs updated.
* Corrected MIDI controls tooltips.

2017-9-11 Will
* Improved AddSynth Voice controls code.
* Corrected 'minus' tooltip.

2017-9-10 Will
* Envelopes converted.

2017-9-9 Will
* Corrected NRPN wrong displayed values.
  Actual values were quite correct.
* Replaced splash screen png with svg version.
* Finally got envelope graphs under control.
  Tidying up and full conversion tomorrow :)

2017-9-8 Will
* Most of envelopes transferred.
  Only graph points to do.
* Improved add/delete point controls.
* Updated docs.

2017-9-7 Will
* Completed filter transfer.
* Improved formant tooltips.

2017-9-5 Will
* Corrected last three dates here :(
* Created noboost branch.
[noboost] reverted note-offs to delete.
[noboost] removed all references to boost.

2017-9-4 Will
* Effects transferred to lock free.
  Noticed long-standing anomally with some dynfilter
  control only working on release.
* Filters mostly transferred to lock free.
  Some formant controls not done yet.

2017-9-1 Will
* BugFix: Oscillator phase was screwed up :(
* Removed redundant code from PadSynth UI.
* Preparing Filters for conversion.

2017-8-31 will
* Cleaned up Sys/Ins controls.
* Added cleanup when Ins destination set to 'off'.
* Yet more doc updates :P

2017-8-30 Will
* BugFix: Disabling a part was resetting all controllers.
* Doc updates.
* Sys/Ins effect controls now transferred to lock free.
  But could be improved.

2017-8-29 Will
* All rotary controllers now MIDI learnable.

2017-8-28 Will
* CLI can now save PadSynth sample sets.
* Failure to save PadSynth sample sets now reported.
* Updated docs.
* Removed reundant code.
* Removed unnecessary mutex lock in Pad apply.
* Fixed regression 'apply' in GUI oscillator.
* Oscillator converted to lock-free (phew!)
  Alse corrected ancient anomally where base